# api-usage-topbar

./: .gitignore  README.md
loggers/node/: README.md  package.json
loggers/node/src/: index.js
loggers/python/: README.md  pyproject.toml
loggers/python/api_usage_topbar_logger/: __init__.py  logger.py
overlay/: index.html  main.js  package.json  preload.js
schema/: usage-event.schema.json
