[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-usage-topbar-logger"
version = "0.0.1"
description = "Logger for ApiUsageTopbar (writes usage.jsonl to %APPDATA%)"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["api_usage_topbar_logger"]
